Add VisualizeOurEarth card

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container landing">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="header">I'm <span class="name">Clay</span> — a software developer based in Austin, Texas.</h2>
+                    <h2 class="header">I'm <span class="name">Clay</span> — a software engineer based in Austin, Texas.</h2>
                     <br>
                 </div>
             </div>
@@ -64,6 +64,18 @@
 
         <div id="portfolio" class="container col-centered col-lg-12">
             <ul class="thumbnail-grid">
+
+            <a class="card-link" href="https://clayjuneau.com/VisualizeOurEarth">
+                <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
+                    <div class="card" style="background-image: url(visualize.png); background-size: contain; background-repeat: no-repeat;">
+                        <div class="card-pants">
+                            <h4 class="card-title">Visualize Our Earth</h4>
+                            <h5 class="card-subtitle">Hackathon, Data Synthesis, Data Visualization, 3D, ThreeJS</h5>
+                            <p class="card-content">Vericast Q2 2022 Earth Day Hackathon Project</p>
+                        </div>
+                    </div>
+                </li>
+            </a>
 
             <a class="card-link" href="tamuhack2021.html">
                 <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
@@ -127,7 +139,7 @@
             <br>
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-                    <p>I'm Clay Juneau. I'm a recent graduate from Texas A&M University with a degree in Computer Science and minors in Cybersecurity and Digital Media Art. I have a passion for learning new skills while maneuvering space between technology and design.</p>
+                    <p>I'm Clay Juneau. I'm a recent graduate from Texas A&M University with a degree in Computer Science and minors in Cybersecurity and Digital Media Art. I have a passion for learning new skills while maneuvering space between technology and design. Currently @ <a href="https://vericast.com/">Vericast</a></p>
                     <br>
                     <p>When I'm am not programming or designing, you'll find me cooking a meal, jogging the trail, or brewing my next batch of cold brew.</p>
                     <br>
