update main page text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container landing">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="header">I'm <span class="name">Clay</span> — a software engineer based in Austin, Texas.</h2>
+                    <h2 class="header">I'm <span class="name">Clay</span> — a full-stack software engineer based in Austin, Texas.</h2>
                     <br>
                 </div>
             </div>
@@ -139,11 +139,11 @@
             <br>
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-                    <p>I'm Clay Juneau. I'm a recent graduate from Texas A&M University with a degree in Computer Science and minors in Cybersecurity and Digital Media Art. I have a passion for learning new skills while maneuvering space between technology and design. Currently @ <a href="https://vericast.com/">Vericast</a></p>
+                    <p>I'm Clay Juneau. I graduated Texas A&M University with a B.S. in Computer Science and minors in Cybersecurity and Digital Media Art. I have a passion maneuvering the space between development and design. Currently @ <a target="_blank" href="https://www.rrd.com/">RR Donnelley</a></p>
                     <br>
-                    <p>When I'm am not programming or designing, you'll find me cooking a meal, jogging the trail, or brewing my next batch of cold brew.</p>
+                    <p>When I'm am not writing code or mocking up wireframes, you'll find me jogging the trail, r&d-ing my latest riff off a margarita, or playing grass volleyball with friends.</p>
                     <br>
-                    <p>I love meeting new people! Say <a href="mailto:hello@clayjuneau.com">hello@clayjuneau.com</a></p>
+                    <p>Say <a href="mailto:hello@clayjuneau.com">hello@clayjuneau.com</a></p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <img id="profpic" src="me.jpg" alt="pretty pic of me that you're missing" id="profpic", height=275px, length=275px, style="border-radius: 50%;">
