--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container landing">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="header">I'm <span class="name">Clay</span> — a full-stack software engineer based in Austin, Texas.</h2>
+                    <h2 class="header">I'm <span class="name">Clay</span> — a full-stack software engineer based in NYC.</h2>
                     <br>
                 </div>
             </div>
@@ -139,7 +139,7 @@
             <br>
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-                    <p>I'm Clay Juneau. I graduated Texas A&M University with a B.S. in Computer Science and minors in Cybersecurity and Digital Media Art. I have a passion maneuvering the space between development and design. Currently @ <a target="_blank" href="https://www.rrd.com/">RR Donnelley</a></p>
+                    <p>I'm Clay Juneau. I graduated Texas A&M University with a B.S. in Computer Science and minors in Cybersecurity and Digital Media Art. I have a passion maneuvering the space between development and design. Currently @ <a target="_blank" href="https://www.rrd.com/">R.R. Donnelley</a></p>
                     <br>
                     <p>When I'm am not writing code or mocking up wireframes, you'll find me jogging the trail, r&d-ing my latest riff off a margarita, or playing grass volleyball with friends.</p>
                     <br>
